// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-aigateway - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Configure Azure API Management as an AI Gateway for AI models, MCP tools, and agents. USE FOR: semantic caching, token limit, content safety, load balancing, AI model governance, MCP rate limiting, jailbreak detection, add Azure OpenAI backend, add AI Foundry model, test AI gateway, LLM policies, configure AI backend, token metrics, AI cost control, convert API to MCP, import OpenAPI to gateway. DO NOT USE FOR: deploying APIM (use azure-prepare), general API policies (use azure-deploy), creating new APIM instance (use azure-prepare).",
  "extractedKeywords": [
    "agents",
    "aigateway",
    "apim",
    "authentication",
    "azure",
    "azure-deploy",
    "azure-prepare",
    "backend",
    "balancing",
    "caching",
    "configure",
    "content",
    "control",
    "convert",
    "cost",
    "creating",
    "deploy",
    "deploying",
    "detection",
    "foundry",
    "gateway",
    "general",
    "governance",
    "identity",
    "import",
    "instance",
    "jailbreak",
    "limit",
    "limiting",
    "load",
    "management",
    "mcp",
    "metrics",
    "model",
    "models",
    "observability",
    "openai",
    "openapi",
    "policies",
    "rate",
    "safety",
    "semantic",
    "test",
    "token",
    "tools",
  ],
  "name": "azure-aigateway",
}
`;

exports[`azure-aigateway - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agents",
  "aigateway",
  "apim",
  "authentication",
  "azure",
  "azure-deploy",
  "azure-prepare",
  "backend",
  "balancing",
  "caching",
  "configure",
  "content",
  "control",
  "convert",
  "cost",
  "creating",
  "deploy",
  "deploying",
  "detection",
  "foundry",
  "gateway",
  "general",
  "governance",
  "identity",
  "import",
  "instance",
  "jailbreak",
  "limit",
  "limiting",
  "load",
  "management",
  "mcp",
  "metrics",
  "model",
  "models",
  "observability",
  "openai",
  "openapi",
  "policies",
  "rate",
  "safety",
  "semantic",
  "test",
  "token",
  "tools",
]
`;
